// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSourcePathFromContext() should render defaultSourcePath for ticket context because unknown context type 1`] = `
[
  "ticket",
  "customer",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[customer][custom] 1`] = `
[
  "customer",
  "data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[customer][customer_external_data] 1`] = `
[
  "customer",
  "external_data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[customer][integrations] 1`] = `
[
  "customer",
  "integrations",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[ticket][custom] 1`] = `
[
  "ticket",
  "customer",
  "data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[ticket][customer_external_data] 1`] = `
[
  "ticket",
  "customer",
  "external_data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[ticket][integrations] 1`] = `
[
  "ticket",
  "customer",
  "integrations",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[user][custom] 1`] = `
[
  "customer",
  "data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[user][customer_external_data] 1`] = `
[
  "customer",
  "external_data",
]
`;

exports[`getSourcePathFromContext() should render the correct sourcePath: getSourcePathFromContext() should render the correct sourcePath DEFAULT_SOURCE_PATHS[user][integrations] 1`] = `
[
  "customer",
  "integrations",
]
`;

exports[`getSourcePathFromContext() should render the sourcePath for standalone widget because of wrong widget type 1`] = `
[
  "ticket",
  "customer",
  "data",
]
`;

exports[`getSourcePathFromContext() should render values of config because unknown widget type 1`] = `
[
  [
    "ticket",
    "customer",
    "data",
  ],
  [
    "ticket",
    "customer",
    "integrations",
  ],
  [
    "ticket",
    "customer",
    "external_data",
  ],
  [
    "ticket",
    "customer",
  ],
]
`;
